--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Technical test for backend developer role at Cognigy.",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/index.js",
+    "watch": "ts-node-dev --rs --respawn src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mohamad Alsioufi",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "16.11.7",
+    "ts-node-dev": "1.1.8",
+    "typescript": "4.4.4"
+  }
 }
