--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "start": "node dist/index.js",
     "watch": "ts-node-dev --rs --respawn src/index.ts",
-    "build": "tsc",
+    "build": "npm run lint && npm run build:ts",
+    "build:ts": "tsc",
+    "lint": "eslint src --ext .js,.ts --ignore-path .gitignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mohamad Alsioufi",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
+    "eslint": "8.2.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   }
