--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "eslint": "8.2.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.4.1",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   }
