--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cognigy-case",
   "version": "1.0.0",
   "description": "Technical test for backend developer role at Cognigy.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "engines": {
+    "node": "16.13.0"
+  },
   "scripts": {
     "start": "node dist/index.js",
     "watch": "ts-node-dev --rs --respawn src/index.ts",
