--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Mohamad Alsioufi",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "4.17.13",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
@@ -26,5 +27,8 @@
     "prettier": "2.4.1",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
+  },
+  "dependencies": {
+    "express": "4.17.1"
   }
 }
