--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "cognigy-case",
   "version": "1.0.0",
   "description": "Technical test for backend developer role at Cognigy.",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "engines": {
     "node": "16.13.0"
   },
   "scripts": {
-    "start": "node dist/index.js",
-    "watch": "ts-node-dev --rs --respawn src/index.ts",
+    "start": "node dist/server.js",
+    "watch": "ts-node-dev --rs --respawn src/server.ts",
     "build": "npm run lint && npm run build:ts",
     "build:ts": "tsc",
     "lint": "eslint src --ext .js,.ts --ignore-path .gitignore",
