--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "ajv": "8.8.1",
     "express": "4.17.1",
     "mongoose": "6.0.13"
   }
