--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
   "scripts": {
     "start": "node dist/server.js",
     "watch": "ts-node-dev --rs --respawn src/server.ts",
-    "build": "npm run lint && npm run build:ts",
+    "build": "npm run lint && npm test && npm run build:ts",
     "build:ts": "tsc",
     "lint": "eslint src --ext .js,.ts --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Mohamad Alsioufi",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "4.17.13",
+    "@types/jest": "27.0.3",
     "@types/node": "16.11.7",
+    "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "jest": "27.3.1",
+    "mongodb-memory-server": "8.0.2",
     "prettier": "2.4.1",
+    "supertest": "6.1.6",
+    "ts-jest": "27.0.7",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.4"
   },
